--- a/bower.json
+++ b/bower.json
@@ -4,20 +4,21 @@
   "dependencies": {
     "modernizr": "2.8.x",
     "angular": "1.3.x",
-    "jquery" : "2.x.x",
-    "angular-animate" : "1.3.x",
-    "angular-cookies" : "1.3.x",
-    "angular-touch" : "1.3.x",
-    "angular-sanitize" : "1.3.x",
-    "restangular" : "1.3.x",
-    "angular-ui-router" : "0.2.x",
-    "foundation" : "5.4.x"
+    "jquery": "2.x.x",
+    "angular-animate": "1.3.x",
+    "angular-cookies": "1.3.x",
+    "angular-touch": "1.3.x",
+    "angular-sanitize": "1.3.x",
+    "restangular": "1.3.x",
+    "angular-ui-router": "0.2.x",
+    "foundation": "5.4.x",
+    "angular-xeditable": "~0.1.8"
   },
   "devDependencies": {
     "angular-mocks": "1.3.x"
   },
   "resolutions": {
     "angular": "1.3.x",
-    "jquery" : "2.x.x"
+    "jquery": "2.x.x"
   }
 }
